chore: fix wrap

--- a/styles/_share.scss
+++ b/styles/_share.scss
@@ -28,7 +28,7 @@
   }
 
   .btn-group {
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     .btn {
       gap: .2rem;
       font-size: .6rem
